--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "typescript": "^3.1.1"
+  },
+  "scripts": {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   }
 }
